[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/polycat.dae" type="PackedScene" id=1]
[ext_resource path="res://environments/Player.gd" type="Script" id=2]
[ext_resource path="res://environments/DeathZone.gd" type="Script" id=3]
[ext_resource path="res://assets/music/sound_lost.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/music/sound_end.wav" type="AudioStream" id=5]
[ext_resource path="res://environments/L1SuccessSide.gd" type="Script" id=6]
[ext_resource path="res://assets/music/sound_success.mp3" type="AudioStream" id=7]
[ext_resource path="res://environments/Level01.gd" type="Script" id=8]

[sub_resource type="Environment" id=9]
background_mode = 1
background_color = Color( 0.145098, 0.678431, 0.913725, 1 )
ambient_light_color = Color( 0.862745, 0.835294, 0.835294, 1 )
fog_enabled = true
fog_color = Color( 1, 1, 1, 1 )
fog_sun_color = Color( 1, 0.901961, 0.701961, 1 )
tonemap_mode = 3

[sub_resource type="CapsuleShape" id=2]
radius = 0.458871
height = 0.911828

[sub_resource type="Environment" id=3]
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 150, 1, 150 )

[sub_resource type="SpatialMaterial" id=14]
albedo_color = Color( 0.596078, 0.396078, 0.396078, 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 14 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.714844, 0.0332486, 0.0332486, 1 )

[sub_resource type="ConcavePolygonShape" id=6]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="BoxShape" id=10]

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.0705882, 0.592157, 0.235294, 1 )

[sub_resource type="CubeMesh" id=12]
material = SubResource( 11 )

[sub_resource type="ConcavePolygonShape" id=13]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.164706, 0.180392, 0.164706, 1 )

[node name="Level01" type="Spatial"]
script = ExtResource( 8 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.443791, -0.440963, 0.780129, 0, 0.870553, 0.492074, -0.89613, 0.218378, -0.386344, 0, 0, 0 )

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 7.80393 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.721347, 0.194246 )
shape = SubResource( 2 )

[node name="CamBase" type="Spatial" parent="Player"]

[node name="Camera" type="Camera" parent="Player/CamBase"]
transform = Transform( 1, 0, 0, 0, 0.782543, 0.622597, 0, -0.622597, 0.782543, 0.322615, 2.56092, 4.4497 )
environment = SubResource( 3 )
current = true

[node name="Graphics" parent="Player" instance=ExtResource( 1 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="DeathZone" type="Area" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="DeathZone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
shape = SubResource( 7 )

[node name="AudioStreamPlayer_Lost" type="AudioStreamPlayer" parent="DeathZone"]
stream = ExtResource( 4 )

[node name="RedSide" type="GridMap" parent="."]
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="RedSide1" type="MeshInstance" parent="RedSide"]
transform = Transform( 4, 0, 0, 0, 0.1, 0, 0, 0, 4, 0, -0.1, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="RedSide/RedSide1"]

[node name="CollisionShape" type="CollisionShape" parent="RedSide/RedSide1/StaticBody"]
shape = SubResource( 6 )

[node name="RedSide2" type="MeshInstance" parent="RedSide"]
transform = Transform( 4, 0, 0, 0, 0.1, 0, 0, 0, 4, 0, -0.1, -8 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="RedSide/RedSide2"]

[node name="CollisionShape" type="CollisionShape" parent="RedSide/RedSide2/StaticBody"]
shape = SubResource( 6 )

[node name="RedSide3" type="MeshInstance" parent="RedSide"]
transform = Transform( 4, 0, 0, 0, 0.1, 0, 0, 0, 4, 0, -0.1, -16 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="RedSide/RedSide3"]

[node name="CollisionShape" type="CollisionShape" parent="RedSide/RedSide3/StaticBody"]
shape = SubResource( 6 )

[node name="RedSide4" type="MeshInstance" parent="RedSide"]
transform = Transform( 4, 0, 0, 0, 0.1, 0, 0, 0, 4, 8, -0.1, -16 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="RedSide/RedSide4"]

[node name="CollisionShape" type="CollisionShape" parent="RedSide/RedSide4/StaticBody"]
shape = SubResource( 6 )

[node name="RedSide5" type="MeshInstance" parent="RedSide"]
transform = Transform( 4, 0, 0, 0, 0.1, 0, 0, 0, 4, 16, -0.1, -16 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="RedSide/RedSide5"]

[node name="CollisionShape" type="CollisionShape" parent="RedSide/RedSide5/StaticBody"]
shape = SubResource( 6 )

[node name="RedSide6" type="MeshInstance" parent="RedSide"]
transform = Transform( 4, 0, 0, 0, 0.1, 0, 0, 0, 4, 24, -0.1, -16 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="RedSide/RedSide6"]

[node name="CollisionShape" type="CollisionShape" parent="RedSide/RedSide6/StaticBody"]
shape = SubResource( 6 )

[node name="RedSide7" type="MeshInstance" parent="RedSide"]
transform = Transform( 4, 0, 0, 0, 0.1, 0, 0, 0, 4, 24, -0.1, -8 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="RedSide/RedSide7"]

[node name="CollisionShape" type="CollisionShape" parent="RedSide/RedSide7/StaticBody"]
shape = SubResource( 6 )

[node name="RedSide8" type="MeshInstance" parent="RedSide"]
transform = Transform( 4, 0, 0, 0, 0.1, 0, 0, 0, 4, 24, -0.1, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="RedSide/RedSide8"]

[node name="CollisionShape" type="CollisionShape" parent="RedSide/RedSide8/StaticBody"]
shape = SubResource( 6 )

[node name="RedSide9" type="MeshInstance" parent="RedSide"]
transform = Transform( 4, 0, 0, 0, 0.1, 0, 0, 0, 4, 24, -0.1, 8 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="RedSide/RedSide9"]

[node name="CollisionShape" type="CollisionShape" parent="RedSide/RedSide9/StaticBody"]
shape = SubResource( 6 )

[node name="RedSide10" type="MeshInstance" parent="RedSide"]
transform = Transform( 4, 0, 0, 0, 0.1, 0, 0, 0, 4, 16, -0.1, 8 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="RedSide/RedSide10"]

[node name="CollisionShape" type="CollisionShape" parent="RedSide/RedSide10/StaticBody"]
shape = SubResource( 6 )

[node name="RedSide11" type="MeshInstance" parent="RedSide"]
transform = Transform( 4, 0, 0, 0, 0.1, 0, 0, 0, 4, 8, -0.1, 8 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="RedSide/RedSide11"]

[node name="CollisionShape" type="CollisionShape" parent="RedSide/RedSide11/StaticBody"]
shape = SubResource( 6 )

[node name="RedSide12" type="MeshInstance" parent="RedSide"]
transform = Transform( 4, 0, 0, 0, 0.1, 0, 0, 0, 4, 0, -0.1, 8 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="RedSide/RedSide12"]

[node name="CollisionShape" type="CollisionShape" parent="RedSide/RedSide12/StaticBody"]
shape = SubResource( 6 )

[node name="L1SuccessSide" type="Area" parent="."]
transform = Transform( 2, 0, 0, 0, 0.01, 0, 0, 0, 2, 8, 0.01, 0 )
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="L1SuccessSide"]
transform = Transform( 1, 0, 0, 0, 0.001, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="L1SuccessSide/CollisionShape"]
mesh = SubResource( 12 )
skeleton = NodePath("../..")
material/0 = null

[node name="StaticBody" type="StaticBody" parent="L1SuccessSide/CollisionShape/MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="L1SuccessSide/CollisionShape/MeshInstance/StaticBody"]
transform = Transform( 0.2, 0, 0, 0, 0.01, 0, 0, 0, 0.2, 0, 0, 0 )
shape = SubResource( 13 )

[node name="AudioStreamPlayer_End" type="AudioStreamPlayer" parent="L1SuccessSide"]
stream = ExtResource( 5 )

[node name="AudioStreamPlayer_Success" type="AudioStreamPlayer" parent="L1SuccessSide"]
stream = ExtResource( 7 )

[node name="TargetSide" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 0.1, 0, 0, 0, 2, 8, -0.25, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 8 )

[node name="StaticBody" type="StaticBody" parent="TargetSide"]

[node name="CollisionShape" type="CollisionShape" parent="TargetSide/StaticBody"]
shape = SubResource( 6 )

[node name="LastSide" type="MeshInstance" parent="."]
transform = Transform( 2, 0, 0, 0, 0.1, 0, 0, 0, 2, 8, -0.25, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 8 )

[node name="StaticBody" type="StaticBody" parent="LastSide"]

[node name="CollisionShape" type="CollisionShape" parent="LastSide/StaticBody"]
shape = SubResource( 6 )

[connection signal="body_entered" from="DeathZone" to="DeathZone" method="_on_DeathZone_body_entered"]
[connection signal="body_entered" from="L1SuccessSide" to="L1SuccessSide" method="_on_SuccessSide_body_entered"]

[editable path="Player/Graphics"]
